--- a/shorebird_code_push_network/ios/ShorebirdUpdaterNetwork.xcframework/Info.plist
+++ b/shorebird_code_push_network/ios/ShorebirdUpdaterNetwork.xcframework/Info.plist
@@ -6,23 +6,6 @@
 	<array>
 		<dict>
 			<key>BinaryPath</key>
-			<string>ShorebirdUpdaterNetworkSim.framework/ShorebirdUpdaterNetworkSim</string>
-			<key>LibraryIdentifier</key>
-			<string>ios-arm64_x86_64-simulator</string>
-			<key>LibraryPath</key>
-			<string>ShorebirdUpdaterNetworkSim.framework</string>
-			<key>SupportedArchitectures</key>
-			<array>
-				<string>arm64</string>
-				<string>x86_64</string>
-			</array>
-			<key>SupportedPlatform</key>
-			<string>ios</string>
-			<key>SupportedPlatformVariant</key>
-			<string>simulator</string>
-		</dict>
-		<dict>
-			<key>BinaryPath</key>
 			<string>ShorebirdUpdaterNetwork.framework/ShorebirdUpdaterNetwork</string>
 			<key>LibraryIdentifier</key>
 			<string>ios-arm64</string>
@@ -34,6 +17,23 @@
 			</array>
 			<key>SupportedPlatform</key>
 			<string>ios</string>
+		</dict>
+		<dict>
+			<key>BinaryPath</key>
+			<string>ShorebirdUpdaterNetwork.framework/ShorebirdUpdaterNetwork</string>
+			<key>LibraryIdentifier</key>
+			<string>ios-arm64_x86_64-simulator</string>
+			<key>LibraryPath</key>
+			<string>ShorebirdUpdaterNetwork.framework</string>
+			<key>SupportedArchitectures</key>
+			<array>
+				<string>arm64</string>
+				<string>x86_64</string>
+			</array>
+			<key>SupportedPlatform</key>
+			<string>ios</string>
+			<key>SupportedPlatformVariant</key>
+			<string>simulator</string>
 		</dict>
 	</array>
 	<key>CFBundlePackageType</key>
