--- a/shorebird_code_push_network/ios/ShorebirdUpdaterNetwork.xcframework/ios-arm64_x86_64-simulator/ShorebirdUpdaterNetwork.framework/Info.plist
+++ b/shorebird_code_push_network/ios/ShorebirdUpdaterNetwork.xcframework/ios-arm64_x86_64-simulator/ShorebirdUpdaterNetwork.framework/Info.plist
@@ -5,7 +5,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>en</string>
     <key>CFBundleExecutable</key>
-    <string>ShorebirdUpdaterNetworkSim</string>
+    <string>ShorebirdUpdaterNetwork</string>
     <key>CFBundleIdentifier</key>
     <string>dev.shorebird.ShorebirdUpdaterNetwork</string>
     <key>CFBundleInfoDictionaryVersion</key>
