--- a/shorebird_code_push_network/example/pubspec.yaml
+++ b/shorebird_code_push_network/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   shorebird_code_push_network:
     path: ../
+  shorebird_code_push: ^1.1.6
   path_provider: ^2.1.1
   yaml: ^3.1.2
 
